fix: truncated text wc parity update

--- a/packages/ibm-products-web-components/src/components/truncated-text/story-styles.scss
+++ b/packages/ibm-products-web-components/src/components/truncated-text/story-styles.scss
@@ -1,13 +1,14 @@
-/*
-* Copyright IBM Corp. 2025, 2025
-*
-* This source code is licensed under the Apache-2.0 license found in the
-* LICENSE file in the root directory of this source tree.
-*/
+//
+// Copyright IBM Corp. 2025
+//
+// This source code is licensed under the Apache-2.0 license found in the
+// LICENSE file in the root directory of this source tree.
+//
+@use '@carbon/styles/scss/type';
 
-@use '@carbon/styles/scss/theme' as *;
+.truncated-text-stories__viewport {
+  @include type.type-style('body-01');
 
-// $story-prefix: 'truncated-text-stories__';
-#main-content {
-  padding: 12rem;
+  inline-size: 100%;
+  max-inline-size: 900px;
 }
